gateway/gateway-demo.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: animal-rescue-k8s
  namespace: animal-rescue
spec:
  routes:
    - services:
        - name: gateway-demo
          port: 80
  virtualhost:
    fqdn: animal-rescue.tap.h2o-4-862.h2o.vmware.com
    tls:
      secretName: animal-rescue/rescue-cert-tls
