gateway/gateway-tap.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: animal-rescue
  namespace: dev-space
spec:
  routes:
    - services:
        - name: gateway-tap
          port: 80
  virtualhost:
    fqdn: animal-rescue-dev-space.tap.h2o-4-862.h2o.vmware.com
    tls:
      secretName: dev-space/rescue-cert-tls
